# codestral-test-rs

./: .gitignore  Cargo.toml  README.md  config.toml
benches/: api_benchmarks.rs  config_benchmarks.rs
src/: cli.rs  config.rs  error.rs  lib.rs  logging.rs  main.rs  models.rs
src/api/: codestral.rs  common.rs  mistral.rs  mod.rs  progress.rs
src/cli/: commands.rs  mod.rs
tests/: api_tests.rs  config_tests.rs  models_tests.rs
