[package]
name = "codestral-test-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.40"
env_logger = "0.11.6"
log = "0.4.26"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.0", features = ["full"] }
