[package]
name = "codestral-test-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.87"
chrono = "0.4.40"
env_logger = "0.11.6"
log = "0.4.26"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
shellexpand = "3.1.0"
tokio = { version = "1.44.0", features = ["full"] }
toml = "0.8.20"

