[package]
name = "codestral-test-rs"
version = "0.1.0"
edition = "2021"

# Configure the library part
[lib]
name = "codestral_test_rs"
path = "src/lib.rs"

# Configure the binary part
[[bin]]
name = "codestral-test-rs"
path = "src/main.rs"

[dependencies]
async-trait = "0.1.87"
chrono = "0.4.40"
clap = { version = "4.5.3", features = ["derive"] }
env_logger = "0.11.6"
indicatif = "0.17.8"
log = "0.4.26"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
shellexpand = "3.1.0"
tokio = { version = "1.44.0", features = ["full"] }
toml = "0.8.20"
thiserror = "1.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio"] }
mockito = "1.4.0"
tokio-test = "0.4.3"
test-log = "0.2.15"
pretty_assertions = "1.4.0"

[[bench]]
name = "config_benchmarks"
harness = false

[[bench]]
name = "api_benchmarks"
harness = false
